# cs411G7

./: .gitignore  MANIFEST.in  README.md  __init__.py  app.js  app.py  index.html  package-lock.json  package.json  setup.cfg
auth/: auth.py
backend/: README.md  run.bat  run.sh  setup.cfg
backend/playlist_maker/: __init__.py
backend/playlist_maker/home/: home.py
backend/playlist_maker/morp/: __init__.py
backend/playlist_maker/mot/: mot.py
backend/tests/: README.md  conftest.py
docs/: README.md  connecting-notes.md  proposal.md  useful-python-flask-links.md
frontend/: .gitignore  README.md  package-lock.json  package.json
frontend/src/: App.css  Home.js  Page1.js  Page2.js  Page3.js  Page4.js  index.js
home/: home.py
instance/: config_unfilled.py
maps/: mapping.py
maps/templates/: form.html
playlist_maker/: __init__.py
playlist_maker/auth/: auth.py
playlist_maker/cache/: __init__.py
playlist_maker/home/: home.py
playlist_maker/maps/: mapping.py
playlist_maker/morp/: morp.py
playlist_maker/mot/: mot.py
playlist_maker/speed/: speed.py
playlist_maker/spotify/: spotify.py
playlist_maker/templates/: base.html  user_info.html
playlist_maker/utils/: location.py
playlist_maker/weather/: weather.py
prototype/: README.md
prototype/playlist_maker/: __init__.py  auth.py
routes/: playlist.js
spotify_api/: spotify_client.py  spotify_handler.py
src/: App.js  Home.js  Page1.js  Page2.js  Page3.js  Page4.js  index.css
templates/: display_playlist.html
tests/: test_flask.py
views/: playlist.pug
(+19 files in other folders)
