[metadata]
name = playlist_maker
version = 1.0.0
description = Spotify playlist maker app for CS411

[options]
packages=find:
include_package_data = true
install_requires = 
    Flask
    Flask-Session
    requests
    googlemaps
    spotipy
    pandas
    pyowm

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests